  This reduces server load if multiple attributes of one object,
  or the same object is modified frequently.
- location of "webapps" folder can be configured in bean "jetty6.server"
  inside "conf/red5.xml" (Jira APPSERVER-152)
- "IStreamFilenameGenerator" can specify if it returns absolute or relative
  paths
- applications can be unloaded and loaded without restarting Red5

Bugfixes:
- validate RTMP handshake received from client (Jira APPSERVER-159)
- Array typed parameters are converted correctly (Jira APPSERVER-161)
- RTMPTHandler is wired through Spring (Jira APPSERVER-150)
- fixed concurrency issue in RTMP encoder that could result in wrong
  packet header types
- IStreamAwareScopeHandler methods are also called for server side streams
- "NetConnection.Connect.AppShutdown" is returned when trying to connect
  to application that currently is unloaded (Jira APPSERVER-13)


Red5 0.6.2  (2007-06-17)
------------------------
Bugfixes:
- "pause" no longer breaks live streams (Jira APPSERVER-136)
- configured subscopes don't get released when a client disconnects
- AMF requests could not be decoded when run in the context root
  (Jira APPSERVER-146)
- fixed bug for Remoting requests without parameters (Jira APPSERVER-147)
- fixed issue with stop/start of war in Tomcat (Jira APPSERVER-155)
- fixed handshake reply for Flash Player 9 Update 3
- IMetaData supports fractional framerates (Jira APPSERVER-157)
- correctly reject empty stream names (Jira APPSERVER-156)
- fixed problem with loading some JAR files from the applications
  classpath (Jira APPSERVER-141)
- fixed decoding of Remoting requests with multiple parameters
  (Jira APPSERVER-151)


Red5 0.6.1  (2007-05-23)
------------------------
New Features:
- Switched to use mina 1.1, more config options in red5.properties
- Newly recorded files start with an "onMetaData" tag containing the
  duration and the codecs used
- Added a JMX subsystem with RMI and HTTP connectors